removed sign up from navbar and tried to fix spacing

--- a/src/components/Navbar/navBar.css
+++ b/src/components/Navbar/navBar.css
@@ -55,6 +55,8 @@ header div,
 nav {
 	display: flex;
 	align-items: center;
+	justify-content:space-between;
+
 }
 
 @media only screen and (max-width: 1024px) {
